# thermal_hydraulics_rs

./: .gitignore  Cargo.toml  README.md  patch_notes.md
src/: ciet_heater_only.rs  main.rs  manual_tests.rs
src/examples/: mod.rs
src/examples/ciet/: mod.rs
src/examples/ciet/heater/: heated_section_example.rs  heater_inclusive_top_bottom_head_example.rs  heater_plus_mx_10_and_struct_support_example.rs  heater_plus_mx_10_without_supports.rs  mod.rs
src/examples/ciet/heater_boussinesq_solver/: heated_section_example.rs  heater_inclusive_top_bottom_head_example.rs  heater_plus_mx_10_and_struct_support_example.rs  heater_plus_mx_10_without_supports.rs  mod.rs
src/examples/ciet/heater_old/: heater_inclusive_top_bottom_head_example.rs  heater_plus_mx_10_without_supports.rs
src/lib/: lib.rs
src/lib/boussinesq_solver/: boundary_conditions.rs  control_volume_dimensions.rs  mod.rs
src/lib/boussinesq_solver/array_control_vol/: conductance_array_functions.rs  mod.rs
src/lib/boussinesq_solver/array_control_vol_and_fluid_component_collections/: conductance_array_functions.rs  mod.rs
src/lib/boussinesq_solver/boussinesq_thermophysical_properties/: density.rs  dynamic_viscosity.rs  mod.rs  prandtl.rs  solid_material_surface_roughness.rs  specific_heat_capacity.rs  temperature_ranges.rs  thermal_conductivity.rs  thermal_diffusivity.rs
src/lib/boussinesq_solver/fluid_mechanics_correlations/: churchill_friction_factor.rs  custom_fldk.rs  dimensionalisation.rs  mod.rs  pipe_calculations.rs
src/lib/boussinesq_solver/heat_transfer_correlations/: mod.rs  parallel_heat_exchangers.rs  thermal_resistance.rs
src/lib/boussinesq_solver/pre_built_components/: mod.rs
src/lib/boussinesq_solver/single_control_vol/: calculation.rs  interaction_between_two_cvs.rs  mod.rs  preprocessing.rs  type_conversion.rs  wrappers_for_heat_transfer_interaction.rs
src/lib/fluid_mechanics_lib/: churchill_friction_factor.rs  custom_fldk.rs  dimensionalisation.rs  mod.rs  rg_test
src/lib/fluid_mechanics_lib/fluid_component_calculation/: custom_component_calc.rs  enums.rs  mod.rs  standard_pipe_calc.rs  tests_and_examples_concurrency_multithreading.rs  tests_and_examples_simple.rs
src/lib/fluid_mechanics_lib/fluid_component_collection/: collection_series_and_parallel_functions.rs  fluid_component_collection.rs  fluid_component_super_collection.rs  mod.rs  super_collection_series_and_parallel_functions.rs  tests_and_examples.rs
src/lib/fluid_mechanics_lib/fluid_thermophysical_properties/: mod.rs  property_library.rs  tests_and_examples.rs
src/lib/fluid_mechanics_lib/prelude/: mod.rs
src/lib/fluid_mechanics_lib/therminol_component/: custom_therminol_component.rs  dowtherm_a_properties.rs  factory.rs  mod.rs  therminol_pipe.rs
src/lib/heat_transfer_lib/: mod.rs
src/lib/prelude/: alpha_nightly.rs  beta_testing.rs  mod.rs
src/lib/thermal_hydraulics_error/: mod.rs
src/lib/tuas_boussinesq_solver/: control_volume_dimensions.rs  mod.rs
tests/: fluid_mechanics_integration_tests.rs  heat_transfer_sandbox.rs  lumped-capacitance-test.ods  lumped-capacitance-test.odt
tests/heat_transfer_sandbox/: automatic_timestep.rs  lumped_heat_capacitance.rs  mod.rs  semi_infinite_one_dimension_transient_conduction.rs
tests/heat_transfer_sandbox/conjugate_heat_transfer_tests/: mod.rs  one_dimension_heater.rs  steady_state_speedup.rs  steady_state_tests.rs
(+544 files in other folders)
