[package]
name = "thermal_hydraulics_rs"
version = "0.0.5"
edition = "2021"
license = "GPL-3.0"
description = "A Thermal Hydraulics Library with some useful traits and functions for heat transfer and fluid mechanics"
homepage = "https://github.com/theodoreOnzGit/thermal_hydraulics_rs"
repository ="https://github.com/theodoreOnzGit/thermal_hydraulics_rs"
readme = "README.md"
categories = ["science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
cauchy = "0.4.0"
csv = "1.2.2"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["intel-mkl-static"] }
peroxide = "0.34.0"
roots = "0.0.8"
uom = "0.35.0"

# library and binary key
[[bin]]
name = "tests"
path = "src/main.rs"

[lib]
name = "thermal_hydraulics_rs"
path = "src/lib/lib.rs"


